src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>Match to salesforce Address format</description>
        <label>City</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Match to salesforce Address format</description>
        <label>Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationReferenceHelper__c</fullName>
        <formula>value(MID(Name,9,1)) + 
value(MID(Name,8,1)) * 2 + 
value(MID(Name,7,1)) * 5 + 
value(MID(Name,6,1)) * 3 + 
value(MID(Name,5,1)) * 6 + 
value(MID(Name,4,1)) * 4 + 
value(MID(Name,3,1)) * 8 + 
value(MID(Name,2,1)) * 7 + 
value(MID(Name,1,1)) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Reference Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationReference__c</fullName>
        <formula>Name &amp;TEXT( LocationValidation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationSubType__c</fullName>
        <description>Dependent on Location Type</description>
        <label>Location Sub Type</label>
        <picklist>
            <controllingField>LocationType__c</controllingField>
            <picklistValues>
                <fullName>Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terraced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <description>Can be used for customer linking validation</description>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocationValidation__c</fullName>
        <formula>CASE(11 - (LocationReferenceHelper__c - (floor(LocationReferenceHelper__c / 11) * 11)), 
1, 1, 
2, 2, 
3, 3, 
4, 4, 
5, 5, 
6, 6, 
7, 7, 
8, 8, 
9, 9, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfActivePrimaryLocationOccup__c</fullName>
        <description>Used to restrict the number of Active Primary Location Occupant at one Location can only be 1</description>
        <label>Number Of Active  Primary Location Occup</label>
        <summaryFilterItems>
            <field>LocationOccupant__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LocationOccupant__c.ActiveBackground__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LocationOccupant__c.Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ParentLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to establish a relationship between Locations.</description>
        <label>Parent Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Child Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostalZIPCode__c</fullName>
        <label>Postal/ZIP Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <description>Match to salesforce Address format</description>
        <label>State/Province</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Match to salesforce Address format</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inactive__c</columns>
        <columns>PostalZIPCode__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>LocationType__c</columns>
        <columns>ParentLocation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LocationInactiveDateManadatory</fullName>
        <active>true</active>
        <description>Inactive Date is Manadatory if Inactive Checkbox is checked.</description>
        <errorConditionFormula>AND(  Inactive__c = True, ISBLANK(  InactiveDate__c  ) )</errorConditionFormula>
        <errorMessage>Please Enter Inactive Date when Inactive is true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocationSubTypeManadatory</fullName>
        <active>true</active>
        <description>Location Sub Type is Mandatory if Location Type = Domestic.</description>
        <errorConditionFormula>AND ( AND (ISPICKVAL ( LocationType__c, &quot;Domestic&quot;)), ISPICKVAL (   LocationSubType__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>LocationSubType__c</errorDisplayField>
        <errorMessage>Please select Location Sub Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SinglePrimaryLocationOccupantRecord</fullName>
        <active>false</active>
        <description>Used to restrict the number of Primary Location Occupant at one Location can only be 1.</description>
        <errorConditionFormula>NumberOfActivePrimaryLocationOccup__c  &gt; 1</errorConditionFormula>
        <errorMessage>There must be only one Primary location Occupant record for a location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UKPostalCodeCheck</fullName>
        <active>true</active>
        <description>Postal Code for UK fromat</description>
        <errorConditionFormula>NOT(

OR(

ISNULL(  PostalZIPCode__c ),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),

REGEX( PostalZIPCode__c , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)

)

)</errorConditionFormula>
        <errorDisplayField>PostalZIPCode__c</errorDisplayField>
        <errorMessage>Please enter the correct format of Postal Code.</errorMessage>
    </validationRules>
</CustomObject>